--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,19 +1,17 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
+<h2>
   <%= @post.title %>
-</p>
+</h2>
 
 <p>
-  <strong>Body:</strong>
+  <strong>Author:</strong>
+  <%= @post.user.nickname %>
+</p>
+
+<div>
   <%= @post.body %>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @post.user %>
-</p>
+</div>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
